--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -3,24 +3,32 @@ name: Build and Deploy Hugo site
 on:
   push:
     branches:
-      - main  # or 'master'
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
         with:
-          submodules: true  # fetch themes
+          submodules: true  # fetch Hugo themes if using git submodules
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
-      - name: Build
+
+      - name: Build site
         run: hugo --minify
-      - name: Deploy
+
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-
+          publish_branch: gh-pages
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
+          force_orphan: true   # Ensures gh-pages branch is clean
