--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -39,7 +39,7 @@ giteaDefaultServer = "https://git.fsfe.org"
 forgejoDefaultServer = "https://v11.next.forgejo.org"
 
 [header]
-  layout = "fixed-gradient" # valid options: basic, fixed, fixed-fill, fixed-gradient, fixed-fill-blur
+  layout = "basic" # valid options: basic, fixed, fixed-fill, fixed-gradient, fixed-fill-blur
 
 [footer]
   showMenu = true
@@ -180,8 +180,3 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
 [custom]
   css = ["css/custom.css"]
 
-[favicon]
-  logo = "logo.png"
-  shortcut = "logo.png"
-  appleTouchIcon = "logo.png"
-  safariPinnedTab = "logo.png"
